--- a/css/style.css
+++ b/css/style.css
@@ -39,24 +39,40 @@ body {
 .element-div {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    font-family: "Robotesqa4F";
 }
 
 .button  {
     font-size: 60px;
     border-radius: 10%;
     font-family: "Robotesqa4F";
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .title {
     font-size: 50px;
     font-family: "Robotesqa4F";
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 #rating-table {
     width: 900px;
-    font-family: "Robotesqa4F";
     font-size: 30px;
     border: 3px solid #dddddd;
+}
+
+select {
+    font-size: 20px;
+    margin-left: 8px;
+    margin-right: 30px;
+}
+
+input {
+    font-size: 30px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
