--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@
          url("../fonts/Robotesqa4F.woff") format("woff");
 }
 
+body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    overflow-x:hidden;
+    background-color: dimgrey;
+}
+
 .game-tab {
-    position: relative;
-    height: 720px;
-    width: 1280px;
-    margin: 0 auto;
-    overflow: hidden;
-    border: 3px solid white;
+    width: 100%;
     /* Это чтобы нельзя было выделять объекты на странице   */
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -29,50 +33,142 @@
 
 #gaming {
     display: block;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
-body {
-    background-color: dimgrey;
+h1, h2, button {
+    white-space: nowrap;
+}
+
+.element-div, .button, .title {
+    font-family: "Robotesqa4F";
 }
 
 .element-div {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    font-family: "Robotesqa4F";
-}
-
-.button  {
-    font-size: 60px;
-    border-radius: 10%;
-    font-family: "Robotesqa4F";
-    margin-left: 40px;
-    margin-right: 40px;
-}
-
-.title {
-    font-size: 50px;
-    font-family: "Robotesqa4F";
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 1%;
 }
 
 #rating-table {
-    width: 900px;
-    font-size: 30px;
+    width: 90vw;
     border: 3px solid #dddddd;
 }
 
-select {
-    font-size: 20px;
-    margin-left: 8px;
-    margin-right: 30px;
+.button {
+    border-radius: 10%;
 }
 
-input {
-    font-size: 30px;
-    margin-left: 40px;
-    margin-right: 40px;
+.button, input {
+    margin: 0 5%;
+}
+
+select {
+    margin-left: 1%;
+    margin-right: 5%;
+}
+
+
+
+@media (min-width: 1920px) {
+    .button  {
+        font-size: 600%;
+    }
+    
+    .title {
+        font-size: 700%;
+    }
+    
+    #rating-table, input {
+        font-size: 300%;
+    }
+
+    h2, select {
+        font-size: 320%;
+    }
+}
+
+@media (min-width: 1000px) and (max-width: 1920px){
+    .button  {
+        font-size: 350%;
+    }
+    
+    .title {
+        font-size: 500%;
+    }
+    
+    #rating-table, input {
+        font-size: 250%;
+    }
+
+    h2, select {
+        font-size: 150%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1000px){
+    .button  {
+        font-size: 300%;
+    }
+    
+    .title {
+        font-size: 400%;
+    }
+    
+    #rating-table {
+        font-size: 200%;
+    }
+    
+    input {
+        font-size: 150%;
+    }
+    
+    h2, select {
+        font-size: 100%;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 768px){
+    .button  {
+        font-size: 150%;
+    }
+    
+    .title {
+        font-size: 200%;
+    }
+    
+    #rating-table {
+        font-size: 100%;
+    }
+    
+    input {
+        font-size: 60%;
+    }
+    
+    h2, select {
+        font-size: 40%;
+    }
+}
+
+@media (max-width: 375px){
+    .button  {
+        font-size: 100%;
+    }
+    
+    .title {
+        font-size: 150%;
+    }
+    
+    #rating-table {
+        font-size: 120%;
+    }
+    
+    input {
+        font-size: 30%;
+    }
+    
+    h2, select {
+        font-size: 20%;
+    }
 }
